<!--
  ~ Copyright (c) 2017. André Mion
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!--Fetch-->
    <string name="fetching_data">Fetching data…</string>
    <string name="connection_error">Oops! Something went wrong. Check your Internet connection and try again.</string>
    <string name="server_error">Oops! Server went wrong. We will try again later.</string>
    <!--General-->
    <string name="app_name">Villains &amp; Heroes</string>
    <string name="transition_character_image" translatable="false">transition_character_image</string>
    <string name="transition_section_image" translatable="false">transition_section_image</string>
    <string name="unavailable_data">Unavailable data</string>
    <!--Character-->
    <string name="label_description">Description</string>
    <string name="label_comics">Comics</string>
    <string name="label_series">Series</string>
    <string name="label_stories">Stories</string>
    <string name="label_events">Events</string>
    <string name="label_related_links">Related links</string>
    <string name="link_detail">Detail</string>
    <string name="link_wiki">Wiki</string>
    <string name="link_comic">Comiclink</string>
    <!--Search-->
    <string name="action_search">Search</string>
    <string name="search_hint">Search…</string>
</resources>
